src/pages/es/v1.20.0/tutorials/crossdomain-iframe.mdx
---
title: "Seguimiento de iFrames entre dominios"
metaTitle: "Seguimiento de iFrames entre dominios"
metaDescription: "Realiza el seguimiento de las interacciones de los usuarios en iFrames entre dominios con OpenReplay."
---

Para habilitar el seguimiento de iFrames entre dominios, debes añadir la opción `crossdomain.enabled` al constructor del tracker, como se muestra a continuación:

```html
<iframe
	title="test"
	src="http://iframe1.website.com/iframe-path"
	width="300"
	height="300"
></iframe>
``` 

Añade la siguiente opción `crossdomain` al constructor de tu tracker:

```js
const tracker = new OpenReplay({
	projectKey: PROJECT_KEY,
	crossdomain: {
		enabled: true
	},
	captureIFrames: true
});
```

Luego, inicializa la instancia del tracker dentro del iFrame deseado y añade `crossdomain.parentDomain` a su constructor:

```js
const tracker = new OpenReplay({
	projectKey: PROJECT_KEY,
	crossdomain: {
	  // Specifies the domain of the parent window
	  // If not specified, it will be set to '*'
	  // Which means that child window will send messages to all domains inside the browser window
	  // Consult your CSP settings to ensure that '*' is allowed or specify the parent domain
		parentDomain: '*',
	  enabled: true
	}
});
```

Ten en cuenta que si utilizas el fragmento del tracker, recomendamos usar la instancia normal (openreplay.js) en lugar de `openreplay-assist.js` para los iframes secundarios (ya que la sesión de assist solo debe conectarse a la instancia principal).

## ¿Tienes preguntas?

Si encuentras algún problema, conéctate a nuestro [Slack](https://slack.openreplay.com) o visita nuestro [Foro](https://forum.openreplay.com) y obtén ayuda de nuestra comunidad.
